shopme project push successfully